--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,17 @@
         android:theme="@style/Theme.MovieTicket"
         tools:targetApi="31" >
         <activity
-            android:name=".ui.WelcomeActivity"
-            android:exported="true" >
-
-        </activity>
-        <activity
-            android:name=".ui.LoginActivity"
+            android:name=".ui.activity.MovieDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.WelcomeActivity"
+            android:exported="true" >
+        </activity>
+        <activity
+            android:name=".ui.activity.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
