--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,7 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     //circle image
-    implementation 'com.mikhaellopez:circularimageview:4.3.0'
-
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
 }
